--- a/rh-sso-with-db/vanilla/sso74-x509-postgresql-external.yaml
+++ b/rh-sso-with-db/vanilla/sso74-x509-postgresql-external.yaml
@@ -16,9 +16,9 @@ metadata:
     description: An example application based on RH-SSO 7.4 on OpenJDK image with an external postgres DB service by CrunchyData. For
       more information about using this template, see https://github.com/jboss-container-images/redhat-sso-7-openshift-image/tree/sso74-dev/docs.
     iconClass: icon-sso
-    openshift.io/display-name: Red Hat Single Sign-On 7.4 on OpenJDK + PostgreSQL
+    openshift.io/display-name: Red Hat Single Sign-On 7.4 on OpenJDK + External PostgreSQL
       (Persistent)
-    openshift.io/provider-display-name: Red Hat, Inc.
+    openshift.io/provider-display-name: Amitai Getzler, PaaS.
     tags: sso,keycloak,jboss
     template.openshift.io/documentation-url: https://access.redhat.com/documentation/en/red-hat-single-sign-on/
     template.openshift.io/long-description: This template defines resources needed
