--- a/rh-sso-with-db/vanilla/sso74-x509-postgresql-external.yaml
+++ b/rh-sso-with-db/vanilla/sso74-x509-postgresql-external.yaml
@@ -310,7 +310,7 @@ objects:
     port: '5432'
     primaryhost: ${DB_SERVICE_NAME}
     primarysecretname: ${DB_SERVICE_NAME}-primaryuser-secret
-    replicas: ${{PG_REPLICAS}}
+    replicas: ${PG_REPLICAS}
     rootsecretname: ${DB_SERVICE_NAME}-postgres-secret
     secretfrom: ''
     status: ''
