--- a/rh-sso-with-db/vanilla/sso74-x509-postgresql-external.yaml
+++ b/rh-sso-with-db/vanilla/sso74-x509-postgresql-external.yaml
@@ -156,6 +156,14 @@ objects:
             value: ${SSO_SERVICE_USERNAME}
           - name: SSO_SERVICE_PASSWORD
             value: ${SSO_SERVICE_PASSWORD}
+          - name: SSO_POSTGRESQL_PORT
+            value: ${SSO_POSTGRESQL_PORT}
+          - name: SSO_POSTGRESQL_PORT_5432_TCP
+            value: ${SSO_POSTGRESQL_PORT_5432_TCP}
+          - name: SSO_POSTGRESQL_SERVICE_HOST
+            value: ${SSO_POSTGRESQL_SERVICE_HOST}
+          - name: SSO_POSTGRESQL_PORT_5432_TCP_ADDR
+            value: ${SSO_POSTGRESQL_PORT_5432_TCP_ADDR}
           image: ${APPLICATION_NAME}
           imagePullPolicy: Always
           livenessProbe:
