--- a/rh-sso-with-db/vanilla/test-doc/params.yaml
+++ b/rh-sso-with-db/vanilla/test-doc/params.yaml
@@ -30,3 +30,14 @@ PG_IMAGE_NAME=crunchy-postgres-ha
 PG_IMAGE_TAG=centos7-12.2-4.3.0
 PG_REPLICAS="2"
 PG_STORAGE_SIZE=1G
+HTTPS_SECRET=sso-app-secret 
+HTTPS_KEYSTORE=keystore.jks
+HTTPS_NAME=jboss
+HTTPS_PASSWORD=redhat
+JGROUPS_ENCRYPT_SECRET=sso-app-secret
+JGROUPS_ENCRYPT_KEYSTORE=jgroups.jceks 
+JGROUPS_ENCRYPT_NAME=secret-key
+JGROUPS_ENCRYPT_PASSWORD=redhat
+SSO_TRUSTSTORE=truststore.jks
+SSO_TRUSTSTORE_PASSWORD=redhat
+SSO_TRUSTSTORE_SECRET=sso-app-secret
