--- a/argocdod/apps/rh-sso-with-db/charts/pgcluster/templates/primaryuser-secret.yaml
+++ b/argocdod/apps/rh-sso-with-db/charts/pgcluster/templates/primaryuser-secret.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 stringData:
-  password: "{{.Values.pg_password}}"
+  password: "{{.Values.DB_PASSWORD}}"
   username: primaryuser
 kind: Secret
 metadata:
   labels:
-    pg-cluster: "{{.Values.pg_cluster_name }}"
-  name: "{{.Values.pg_cluster_name}}-primaryuser-secret"
-  namespace: "{{.Values.pg_namespace}}"
+    pg-cluster: "{{.Values.PG_CLUSTER_NAME }}"
+  name: "{{.Values.PG_CLUSTER_NAME}}-primaryuser-secret"
+  namespace: "{{.Values.PG_NAMESPACE}}"
 type: Opaque
