--- a/rh-sso-with-db/helm/charts/pgcluster/templates/postgres-secret.yaml
+++ b/rh-sso-with-db/helm/charts/pgcluster/templates/postgres-secret.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 stringData:
-  password: "{{.Values.password}}"
+  password: "{{.Values.DB_PASSWORD}}"
   username: postgres
 kind: Secret
 metadata:
   labels:
-    pg-cluster: "{{.Values.pg_cluster_name }}"
-  name: "{{.Values.pg_cluster_name}}-postgres-secret"
-  namespace: "{{.Values.pg_namespace}}"
+    pg-cluster: "{{.Values.PG_CLUSTER_NAME }}"
+  name: "{{.Values.PG_CLUSTER_NAME}}-postgres-secret"
+  namespace: "{{.Values.PG_NAMESPACE}}"
 type: Opaque
