--- a/rh-sso-with-db/helm/charts/pgcluster/values.yaml
+++ b/rh-sso-with-db/helm/charts/pgcluster/values.yaml
@@ -1,12 +1,10 @@
-pg_cluster_name: ""
-pg_namespace: ""
-pg_pgo_version: ""
-pg_storage_class: ""
-pg_storage_size: ""
-pg_image_name: ""
-pg_image_tag: ""
-pg_database_name: ""
-pg_replicas: ""
-pg_username: ""
-pg_password: ""
-pg_service_prefix: ""
+  PG_CLUSTER_NAME: ""
+  PG_NAMESPACE: ""
+  PG_PGO_VERSION: ""
+  PG_STORAGE_CLASS: ""
+  PG_STORAGE_SIZE: ""
+  PG_IMAGE_NAME: ""
+  PG_IMAGE_TAG: ""
+  PG_DATABASE_NAME: ""
+  PG_REPLICAS: ""
+  PG_SERVICE_PREFIX: ""
