--- a/argocdod/apps/rh-sso-with-db/templates/sso-app-secret.yaml
+++ b/argocdod/apps/rh-sso-with-db/templates/sso-app-secret.yaml
@@ -7,7 +7,7 @@ kind: Secret
 metadata:
   creationTimestamp: "2020-07-06T11:06:16Z"
   name: sso-app-secret
-  namespace: {{ .Values.rhsso_namespace }}
+  namespace: "{{ .Values.rhsso_namespace }}"
   resourceVersion: "4464698"
   selfLink: "/api/v1/namespaces/{{ .Values.rhsso_namespace }}/secrets/sso-app-secret"
   uid: 2ccbeef0-bfd8-44b4-8866-c02a5b61a1eb
