--- a/argocdod/apps/rh-sso-with-db/templates/sso74-x509-postgresql-external.yaml
+++ b/argocdod/apps/rh-sso-with-db/templates/sso74-x509-postgresql-external.yaml
@@ -35,6 +35,7 @@ metadata:
   labels:
     application: {{ .Values.APPLICATION_NAME }}
   name: "secure-{{ .Values.APPLICATION_NAME }}"
+  namespace: {{ .Values.rhsso_namespace }}
 spec:
   ports:
   - port: 8443
@@ -50,6 +51,7 @@ metadata:
   labels:
     application: {{ .Values.APPLICATION_NAME }}
   name: "{{ .Values.APPLICATION_NAME }}-postgresql"
+  namespace: {{ .Values.rhsso_namespace }}
 spec:
   type: ExternalName
   externalName: "{{ .Values.DB_SERVICE_NAME }}.{{ .Values.PG_NAMESPACE }}.svc.cluster.local"
@@ -65,6 +67,7 @@ metadata:
   labels:
     application: {{ .Values.APPLICATION_NAME }}
   name: "{{ .Values.APPLICATION_NAME }}-ping"
+  namespace: {{ .Values.rhsso_namespace }}
 spec:
   clusterIP: None
   ports:
@@ -82,6 +85,7 @@ metadata:
   labels:
     application: {{ .Values.APPLICATION_NAME }}
   name: {{ .Values.APPLICATION_NAME }}
+  namespace: {{ .Values.rhsso_namespace }}
 spec:
   host: {{ .Values.HOSTNAME_HTTP }}
   to:
@@ -109,6 +113,7 @@ metadata:
   labels:
     application: {{ .Values.APPLICATION_NAME }}
   name: {{ .Values.APPLICATION_NAME }}
+  namespace: {{ .Values.rhsso_namespace }}
 spec:
   replicas: 1
   selector:
