--- a/argocdod/apps/rh-sso-with-db/templates/sso74-x509-postgresql-external.yaml
+++ b/argocdod/apps/rh-sso-with-db/templates/sso74-x509-postgresql-external.yaml
@@ -100,6 +100,7 @@ metadata:
   labels:
     application: {{ .Values.APPLICATION_NAME }}
   name: "secure-{{ .Values.APPLICATION_NAME }}"
+  namespace: {{ .Values.rhsso_namespace }}
 spec:
   host: {{ .Values.HOSTNAME_HTTPS }}
   tls:
