--- a/argocdod/apps/rh-sso-with-db/templates/sso74-x509-postgresql-external.yaml
+++ b/argocdod/apps/rh-sso-with-db/templates/sso74-x509-postgresql-external.yaml
@@ -102,6 +102,7 @@ metadata:
   name: "secure-{{ .Values.APPLICATION_NAME }}"
   namespace: {{ .Values.rhsso_namespace }}
 spec:
+  host: {{ .Values.HOSTNAME_HTTPS }}
   tls:
     termination: passthrough
   to:
