--- a/argocdod/apps/rh-sso-with-db/templates/sso74-x509-postgresql-external.yaml
+++ b/argocdod/apps/rh-sso-with-db/templates/sso74-x509-postgresql-external.yaml
@@ -76,7 +76,7 @@ spec:
   selector:
     deploymentConfig: {{ .Values.APPLICATION_NAME }}
 ---
-apiVersion: v1
+apiVersion: route.openshift.io/v1
 id: "{{ .Values.APPLICATION_NAME }}-http"
 kind: Route
 metadata:
@@ -91,7 +91,7 @@ spec:
   to:
     name: {{ .Values.APPLICATION_NAME }}
 ---
-apiVersion: v1
+apiVersion: route.openshift.io/v1
 id: "{{ .Values.APPLICATION_NAME }}-https"
 kind: Route
 metadata:
@@ -108,7 +108,7 @@ spec:
   to:
     name: "secure-{{ .Values.APPLICATION_NAME }}"
 ---
-apiVersion: v1
+apiVersion: apps.openshift.io/v1
 kind: DeploymentConfig
 metadata:
   labels:
