--- a/argocdod/apps/rh-sso-with-db/templates/sso74-x509-postgresql-external.yaml
+++ b/argocdod/apps/rh-sso-with-db/templates/sso74-x509-postgresql-external.yaml
@@ -18,6 +18,7 @@ metadata:
   labels:
     application: {{ .Values.APPLICATION_NAME }}
   name: {{ .Values.APPLICATION_NAME }}
+  namespace: {{ .Values.rhsso_namespace }}
 spec:
   ports:
   - port: 8080
