--- a/argocdod/apps/rh-sso-with-db/charts/pgcluster/templates/myuser-secret.yaml
+++ b/argocdod/apps/rh-sso-with-db/charts/pgcluster/templates/myuser-secret.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 stringData:
-  password: "{{.Values.DB_USERNAME}}"
-  username: "{{.Values.DB_PASSWORD}}"
+  password: "{{.Values.DB_PASSWORD}}"
+  username: "{{.Values.DB_USERNAME}}"
 kind: Secret
 metadata:
   labels:
