--- a/argocdod/apps/mongodb-operator/templates/opsmanager_cr.yaml
+++ b/argocdod/apps/mongodb-operator/templates/opsmanager_cr.yaml
@@ -11,6 +11,18 @@ spec:
   applicationDatabase:
     members: {{ .Values.opsmanagercr.appdb.members }}
     persistent: {{ .Values.opsmanagercr.appdb.persistent }}
+    podSpec:
+      persistence:
+        multiple:
+          data:
+            storage: {{ .Values.opsmanagercr.appdb.podSpec.persistence.multiple.data.storage }}
+            storageClass: {{ .Values.opsmanagercr.appdb.podSpec.persistence.multiple.data.storageClass }}
+          journal:
+            storage: {{ .Values.opsmanagercr.appdb.podSpec.persistence.multiple.journal.storage }}
+            storageClass: {{ .Values.opsmanagercr.appdb.podSpec.persistence.multiple.journal.storageClass }}
+          logs:
+            storage: {{ .Values.opsmanagercr.appdb.podSpec.persistence.multiple.logs.storage }}
+            storageClass: {{ .Values.opsmanagercr.appdb.podSpec.persistence.multiple.logs.storageClass }}
   configuration:
     automation.versions.source: local
     mms.ignoreInitialUiSetup: "{{ .Values.opsmanagercr.mms.ignoreInitialUiSetup }}"
