--- a/argocdod/apps/mongodb-operator/values.yaml
+++ b/argocdod/apps/mongodb-operator/values.yaml
@@ -74,6 +74,18 @@ opsmanagercr:
   appdb:
     members: 3
     persistent: true
+    podSpec:
+      persistence:
+        multiple:
+          data:
+            storage: "16G"
+            storageClass: "managed-premium"
+          journal:
+            storage: "1G"
+            storageClass: "managed-premium"
+          logs:
+            storage: "3G"
+            storageClass: "managed-premium"
   mms:
     ignoreInitialUiSetup: "true"
     fromEmailAddr: "cloudlet@cloudlet.com"
