--- a/argocdod/apps/crunchy-cluster/values.yaml
+++ b/argocdod/apps/crunchy-cluster/values.yaml
@@ -9,3 +9,5 @@ database_name: testdb
 replicas: "2"
 username: myuser
 password: password
+caSecret: postgresql-ca
+tlsSecret: hacluster-tls-keypair
