--- a/argocdod/apps/crunchy-cluster/templates/pgcluster.yaml
+++ b/argocdod/apps/crunchy-cluster/templates/pgcluster.yaml
@@ -75,9 +75,9 @@ spec:
   replicas: "{{.replicas}}"
   rootsecretname: "{{.cluster_name}}-postgres-secret"
   tls:
-    caSecret: "{{.caSecret}}"
+    caSecret: "{{.caSecret}}-postgresql-ca"
     replicationTLSSecret: ""
-    tlsSecret: "{{.tlsSecret}}"
+    tlsSecret: "{{.tlsSecret}}-hacluster-tls-keypair"
   secretfrom: ''
   status: ''
   strategy: '1'
